Add extra assertions to clarify usage.

--- a/catkit-server/pacts/ios-app/catkit_ios_app-catkit_service.json
+++ b/catkit-server/pacts/ios-app/catkit_ios_app-catkit_service.json
@@ -21,7 +21,8 @@
           "Content-Type": "application/json"
         },
         "body": {
-          "response": "Meow!"
+          "message": "Meow!",
+          "status": "happy"
         }
       }
     }
