Update to XCode 8

--- a/catkit-server/pacts/ios-app/catkit_ios_app-catkit_service.json
+++ b/catkit-server/pacts/ios-app/catkit_ios_app-catkit_service.json
@@ -10,7 +10,7 @@
       "description": "a request for feeding",
       "request": {
         "method": "get",
-        "path": "/feedMe",
+        "path": "/feed-me",
         "headers": {
           "Accept": "application/json"
         }
