Add example with a provider state.

--- a/catkit-server/pacts/ios-app/catkit_ios_app-catkit_service.json
+++ b/catkit-server/pacts/ios-app/catkit_ios_app-catkit_service.json
@@ -25,6 +25,27 @@
           "status": "happy"
         }
       }
+    },
+    {
+      "description": "a request for feeding",
+      "provider_state": "We are out of cat food",
+      "request": {
+        "method": "get",
+        "path": "/feed-me",
+        "headers": {
+          "Accept": "application/json"
+        }
+      },
+      "response": {
+        "status": 400,
+        "headers": {
+          "Content-Type": "application/json"
+        },
+        "body": {
+          "message": "Out of food dude",
+          "status": "grumpy"
+        }
+      }
     }
   ],
   "metadata": {
